# 1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: check.yml
Django_project/: .env  .gitignore  Dockerfile
Django_project/config/: settings.py
Django_project/scripts/: run.sh
apps/accounts/: models.py  tests.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/analysis/: Analyzer.py  analysis_serializers.py  analysis_services.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/notifications/: admin.py  models.py  notifications.py  services.py  tests.py  urls.py  views.py
apps/transactions/: apps.py  models.py  services.py  tests.py  views.py
apps/users/: models.py  users_serializers.py  views.py
config/: celery.py  urls.py
config/settings/: base.py
project/: .pre-commit-config.yaml  .python-version  Dockerfile  db.sqlite3.txt  docker-compose.yml  pyproject.toml  requirements.txt
project/.github/workflows/: check.yml
project/accounts/: models.py  serializers.py  tests.py  urls.py
project/accounts/migrations/: 0001_initial.py  0002_initial.py
project/config/: settings.py  urls.py
project/config/settings/: base.py
project/tests/: test_api.py
project/transactions/: apps.py  constants.py  models.py  serializers.py  tests.py  urls.py
project/transactions/migrations/: 0001_initial.py
project/users/: admin.py  models.py  serializers.py  urls.py  views.py
project/users/migrations/: 0001_initial.py  0002_alter_user_user_phone.py
scripts/: run.sh
(+8 files in other folders)
